--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "@smirea/cookie-clicker-bot",
     "private": true,
-    "version": "1.8.0",
+    "version": "2.0.0",
     "description": "",
     "main": "dist/CookieBot.js",
     "source": "src/index.ts",
     "scripts": {
-        "watch": "rm -rf dist; parcel watch --no-source-maps",
-        "build": "rm -rf dist; parcel build --no-source-maps"
+        "watch": "rm -rf dist; webpack --watch",
+        "build": "rm -rf dist; webpack",
+        "build:errors": "tsc --noEmit"
     },
     "repository": {
         "type": "git",
@@ -21,6 +22,11 @@
     },
     "homepage": "https://github.com/smirea/cookie-clicker-bot#readme",
     "devDependencies": {
-        "parcel": "^2.0.1"
+        "terser-webpack-plugin": "^5.3.0",
+        "ts-loader": "^9.2.6",
+        "tslib": "^2.3.1",
+        "typescript": "^4.5.4",
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1"
     }
 }
