--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
     "name": "@smirea/cookie-clicker-bot",
     "private": true,
-    "version": "2.10.0",
+    "version": "2.11.0",
     "description": "",
     "main": "dist/CookieBot.js",
     "source": "src/index.ts",
     "scripts": {
         "watch": "rm -rf dist; webpack --watch",
         "build": "rm -rf dist; webpack",
-        "build:errors": "tsc --noEmit"
+        "build:tsc-errors": "tsc --noEmit"
     },
     "repository": {
         "type": "git",
@@ -22,6 +22,7 @@
     },
     "homepage": "https://github.com/smirea/cookie-clicker-bot#readme",
     "devDependencies": {
+        "husky": "^7.0.4",
         "terser-webpack-plugin": "^5.3.0",
         "ts-loader": "^9.2.6",
         "tslib": "^2.3.1",
