--- a/package.json
+++ b/package.json
@@ -22,12 +22,20 @@
     },
     "homepage": "https://github.com/smirea/cookie-clicker-bot#readme",
     "devDependencies": {
+        "@types/react": "^17.0.38",
+        "css-loader": "^6.5.1",
         "husky": "^7.0.4",
+        "style-loader": "^3.3.1",
+        "stylus": "^0.56.0",
+        "stylus-loader": "^6.2.0",
         "terser-webpack-plugin": "^5.3.0",
         "ts-loader": "^9.2.6",
         "tslib": "^2.3.1",
         "typescript": "^4.5.4",
         "webpack": "^5.65.0",
         "webpack-cli": "^4.9.1"
+    },
+    "dependencies": {
+        "preact": "^10.6.4"
     }
 }
