--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,8 @@
         "sourceMap": true,
         "strict": true,
         "target": "ES2019",
+        "jsx": "react-jsx",
+        "jsxImportSource": "preact",
         "useUnknownInCatchVariables": false
     },
     "include": [
