--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "scripts": {
         "watch": "rm -rf dist; webpack --watch",
         "build": "rm -rf dist; webpack",
-        "build:tsc-errors": "tsc --noEmit"
+        "build:tsc-errors": "tsc --noEmit",
+        "pre-commit": "node scripts/preCommit.js"
     },
     "repository": {
         "type": "git",
